# pmmaiagent

./: .env.prod.example  .gitignore  README.md  REPO.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/hooks/: security-validator.sh
.github/workflows/: deploy-frontend.yml
config/skills/company_context/: SKILL.md
config/skills/context/: tools.py
config/skills/feature_search/: SKILL.md  tools.py
config/skills/portal_articles/: SKILL.md  tools.py
config/skills/release_features/: SKILL.md  tools.py
config/skills/release_notes/: SKILL.md
context/: company-context.md
docs/: pmm-ai-agent-architecture-diagrams.md  pmm-ai-agent-architecture.md  pmm-ai-agent-devops-plan.md  pmm-ai-agent-guide.md
frontend/: CNAME  design-tokens.ts  index.html
infrastructure/ec2/: docker-compose.prod.yml  setup.sh
infrastructure/git-hooks/: pre-push
prompts/: COMPACTION_PROMPT.txt  adhoc_router_node.txt  entry_node.txt  output_node.txt  output_review_node.txt  plan_gen_node.txt  plan_review_node.txt  portal_context_node.txt  refine_node.txt  release_confirm_node.txt  release_context_node.txt  suggest_node.txt  system.txt  update_feedback_node.txt
services/orchestration/: Dockerfile  agent.py  compaction.py  main.py  requirements-dev.txt  requirements.txt  settings.py
services/orchestration/context_loader/: prompt_loader.py  s3_loader.py  skill_loader.py
services/orchestration/session/: models.py  redis_client.py  session_history.py
services/orchestration/tools/: api_client.py  deps.py
